--- a/k8s/apirule.yaml
+++ b/k8s/apirule.yaml
@@ -1,12 +1,12 @@
 apiVersion: gateway.kyma-project.io/v1beta1
 kind: APIRule
 metadata:
-  name: fe-ui5-mssql
+  name: fe-ui5-mssql-my
 spec:
   gateway: kyma-gateway.kyma-system.svc.cluster.local
-  host: fe-ui5-mssql
+  host: fe-ui5-mssql-my
   service:
-    name: fe-ui5-mssql
+    name: fe-ui5-mssql-my
     port: 80
   rules:
     - path: /.*
