--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,9 +1,9 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: fe-ui5-mssql
+  name: fe-ui5-mssql-my
   labels:
-    app: fe-ui5-mssql
+    app: fe-ui5-mssql-my
 data:
   config.json: |-
     {
