--- a/k8s/deployment-all.yaml
+++ b/k8s/deployment-all.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: fe-ui5-mssql-my
-          image: afdendy/fe-ui5-mssql:linux
+          image: afdendy/fe-ui5:linux
           imagePullPolicy: Always
           ports:
             - name: http
